passing all testcases

--- a/PA1/Makefile
+++ b/PA1/Makefile
@@ -1,2 +1,4 @@
 main: main.cpp parser.hpp gate.hpp
-	g++ -Wall -o main main.cpp parser.hpp gate.hpp
+	g++ -Wall -o main -std=c++17 main.cpp
+clean:
+	rm main
